# backend1

./: db.sqlite3  pyproject.toml  requirements.txt
apps/reviews/: models.py
config/: settings.py
